--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </form>
 
                 <div class="mt-3 flex flex-wrap items-center gap-2">
-                    <span id="authStatus" class="text-xs text-slate-500">Chưa đăng nhập.</span>
+                    <span id="authStatus" class="text-xs text-slate-500"></span>
                 </div>
             </div>
         </div>
