--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <div class="flex items-center justify-between rounded-2xl bg-white px-5 py-5 shadow-lg shadow-slate-200/70">
 
                 <!-- Logo -->
-                <div class="flex items-center gap-3">
+                <a href="/" class="flex items-center gap-3">
                     <div class="grid h-9 w-9 place-items-center rounded-lg bg-blue-600 text-white font-bold">
                         ✓
                     </div>
                     <span class="text-lg font-extrabold">AI for Work</span>
-                </div>
+                </a>
 
                 <!-- Auth -->
                 <div class="flex items-center gap-2">
