--- a/index.html
+++ b/index.html
@@ -134,11 +134,20 @@
                     <input id="modalTitle"
                         class="rounded-2xl border border-slate-200 px-3 py-2 text-sm outline-none focus:ring-4 focus:ring-blue-100"
                         placeholder="Title" />
-                    <select id="modalType"
-                        class="rounded-2xl border border-slate-200 px-3 py-2 text-sm outline-none focus:ring-4 focus:ring-blue-100">
-                        <option value="image">Image</option>
-                        <option value="motion">Motion</option>
-                    </select>
+                    <div class="relative w-full">
+                        <select id="modalType"
+                            class="h-11 w-full appearance-none rounded-2xl border border-slate-200 bg-white px-4 pr-10 text-sm outline-none focus:ring-4 focus:ring-blue-100">
+                            <option value="image">Image</option>
+                            <option value="motion">Motion</option>
+                        </select>
+                        <!-- icon dropdown -->
+                        <svg class="pointer-events-none absolute right-3 top-1/2 h-5 w-5 -translate-y-1/2 text-slate-500"
+                            viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd"
+                                d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.06 1.06l-4.24 4.24a.75.75 0 0 1-1.06 0L5.21 8.29a.75.75 0 0 1 .02-1.08z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </div>
                     <textarea id="modalText"
                         class="min-h-[180px] rounded-2xl border border-slate-200 p-3 text-sm leading-6 outline-none focus:ring-4 focus:ring-blue-100"
                         placeholder="Prompt text..."></textarea>
