--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <!-- Toast -->
         <div id="toast"
-            class="pointer-events-none fixed top-10 left-1/2 z-50 hidden -translate-x-1/2 rounded-2xl bg-slate-900 px-4 py-2 text-sm font-semibold text-white shadow-lg">
+            class="pointer-events-none fixed top-10 left-1/2 z-[9999] hidden -translate-x-1/2 rounded-2xl bg-slate-900 px-4 py-2 text-sm font-semibold text-white shadow-lg">
             OK
         </div>
 
@@ -154,11 +154,11 @@
                 </div>
 
                 <div class="mt-4 flex gap-2">
-                    <button id="saveModal"
+                    <button id="saveModal" type="button"
                         class="flex-1 rounded-2xl bg-blue-600 px-4 py-2.5 text-sm font-bold text-white hover:bg-blue-700">
                         Save
                     </button>
-                    <button id="cancelModal"
+                    <button id="cancelModal" type="button"
                         class="rounded-2xl px-4 py-2.5 text-sm font-semibold text-slate-700 ring-1 ring-slate-200 hover:bg-slate-50">
                         Cancel
                     </button>
