--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="vi">
+<html lang="vi" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8" />
@@ -10,6 +10,8 @@
 </head>
 
 <body class="min-h-screen bg-slate-50 text-slate-900" style="background: rgb(227, 239, 250);">
+    <a id="top"></a>
+
     <!-- Top bar -->
     <header class="sticky top-8 z-50">
         <div class="mx-auto max-w-7xl px-4">
@@ -40,38 +42,6 @@
     </header>
 
     <main class="mx-auto max-w-6xl mt-10 px-4 py-6">
-        <!-- Auth box (basic đẹp, 3 cột) -->
-        <div id="authBox" class="mb-5 hidden">
-            <div class="mx-auto max-w-6xl rounded-2xl bg-white p-4 shadow-sm ring-1 ring-slate-200">
-                <form id="loginForm" class="grid gap-3 md:grid-cols-3 md:items-end">
-                    <!-- Email -->
-                    <label class="block">
-                        <span class="mb-1 block text-xs font-semibold text-slate-600">Email</span>
-                        <input id="email"
-                            class="w-full rounded-xl border border-slate-200 bg-slate-50 px-3 py-2.5 text-sm outline-none focus:border-blue-400 focus:bg-white focus:ring-4 focus:ring-blue-100"
-                            placeholder="name@email.com" />
-                    </label>
-
-                    <!-- Password -->
-                    <label class="block">
-                        <span class="mb-1 block text-xs font-semibold text-slate-600">Password</span>
-                        <input id="password" type="password"
-                            class="w-full rounded-xl border border-slate-200 bg-slate-50 px-3 py-2.5 text-sm outline-none focus:border-blue-400 focus:bg-white focus:ring-4 focus:ring-blue-100"
-                            placeholder="••••••••" />
-                    </label>
-
-                    <!-- Button -->
-                    <button id="btnLogin"
-                        class="h-[42px] w-full rounded-xl bg-slate-900 px-4 text-sm uppercase font-bold text-white hover:bg-slate-800 active:translate-y-px">
-                        GO
-                    </button>
-                </form>
-
-                <div class="mt-3 flex flex-wrap items-center gap-2">
-                    <span id="authStatus" class="text-xs text-slate-500"></span>
-                </div>
-            </div>
-        </div>
 
         <!-- Controls -->
         <div class="flex flex-col gap-3 md:flex-row md:items-center md:justify-between">
@@ -179,10 +149,56 @@
             </div>
 
             <pre id="viewContent"
-                class="max-h-[60vh] overflow-y-auto whitespace-pre-wrap rounded-xl bg-slate-50 p-4 text-sm leading-6 text-slate-800">
-    </pre>
+                class="max-h-[60vh] overflow-y-auto whitespace-pre-wrap rounded-xl bg-slate-50 p-4 text-sm leading-6 text-slate-800"></pre>
         </div>
     </div>
+
+    <!-- LOGIN MODAL -->
+    <div id="loginModal" class="fixed inset-0 z-[999] hidden">
+        <!-- overlay -->
+        <div id="loginOverlay"
+            class="absolute inset-0 bg-black/40 backdrop-blur-sm opacity-0 transition-opacity duration-300"></div>
+
+        <!-- box -->
+        <div id="loginBox"
+            class="absolute left-1/2 top-1/2 w-[92%] max-w-sm -translate-x-1/2 -translate-y-1/2 scale-95 opacity-0 translate-y-6 rounded-2xl bg-white p-5 shadow-xl transition-all duration-300">
+
+            <div class="relative flex items-center">
+                <h3 class="absolute left-1/2 -translate-x-1/2 text-normal uppercase font-extrabold">
+                    Login
+                </h3>
+                <button id="closeLoginModal" class="ml-auto rounded-lg px-2 py-1 text-sm hover:bg-slate-100">
+                    ✕
+                </button>
+            </div>
+
+            <form id="loginForm" class="mt-4 grid gap-3">
+                <div>
+                    <label class="mb-1 block text-xs font-semibold text-slate-600">Email</label>
+                    <input id="email"
+                        class="w-full rounded-xl border border-slate-200 bg-slate-50 px-3 py-2 text-sm outline-none focus:ring-4 focus:ring-blue-100"
+                        placeholder="name@email.com" />
+                </div>
+
+                <div>
+                    <label class="mb-1 block text-xs font-semibold text-slate-600">Password</label>
+                    <input id="password" type="password"
+                        class="w-full rounded-xl border border-slate-200 bg-slate-50 px-3 py-2 text-sm outline-none focus:ring-4 focus:ring-blue-100"
+                        placeholder="••••••••" />
+                </div>
+
+                <button id="btnLogin" type="submit"
+                    class="mt-2 h-[42px] w-full rounded-xl bg-slate-900 text-sm uppercase font-bold text-white hover:bg-slate-800">
+                    GO
+                </button>
+            </form>
+        </div>
+    </div>
+
+    <a href="#top" id="btnTop"
+        class="fixed bottom-6 right-6 z-[999] grid h-12 w-12 place-items-center rounded-full shadow-lg hover:bg-slate-800 active:translate-y-px">
+        <svg viewBox="0 0 1024 1024" width="24px" class="icon" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#000000" d="M104.704 685.248a64 64 0 0090.496 0l316.8-316.8 316.8 316.8a64 64 0 0090.496-90.496L557.248 232.704a64 64 0 00-90.496 0L104.704 594.752a64 64 0 000 90.496z"></path></g></svg>
+    </a>
 
     <script type="module" src="assets/app.js"></script>
 </body>
