--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prompt Pro</title>
+    <title>EasyAI Prompts</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/styles.css" />
 </head>
@@ -22,7 +22,7 @@
                     <div class="grid h-9 w-9 place-items-center rounded-lg bg-blue-600 text-white font-bold">
                         ✓
                     </div>
-                    <span class="text-lg font-extrabold">AI for Work</span>
+                    <span class="text-lg font-extrabold">AI prompts easy for everyone</span>
                 </a>
 
                 <!-- Auth -->
@@ -74,6 +74,88 @@
                 New Prompt
             </button>
         </div>
+
+        <section id="pricingSection" class="mx-auto max-w-5xl px-4 py-10">
+            <h2 class="mb-3 text-center text-3xl font-bold">
+                Chọn gói truy cập Prompt
+            </h2>
+            <p class="mb-12 text-center text-slate-500">
+                Chỉ trả tiền 1 lần – dùng trọn bộ prompt chất lượng cao
+            </p>
+
+            <div class="grid gap-6 md:grid-cols-3">
+                <!-- FREE -->
+                <div class="rounded-2xl border border-slate-200 bg-slate-50 p-6 text-center opacity-70">
+                    <h3 class="mb-2 text-lg font-semibold">Free</h3>
+                    <p class="mb-4 text-sm text-slate-500">Dùng thử</p>
+
+                    <div class="mb-6 text-3xl font-bold">0₫</div>
+
+                    <ul class="mb-6 space-y-2 text-sm text-slate-600">
+                        <li>❌ Không xem prompt</li>
+                        <li>❌ Không copy</li>
+                        <li>❌ Không cập nhật</li>
+                    </ul>
+
+                    <button disabled
+                        class="w-full cursor-not-allowed rounded-xl bg-slate-300 py-2 text-sm font-medium text-white">
+                        Đã bị khóa
+                    </button>
+                </div>
+
+                <!-- PRO -->
+                <div class="relative rounded-2xl border border-indigo-500 bg-white p-6 text-center shadow-lg">
+                    <div
+                        class="absolute -top-3 left-1/2 -translate-x-1/2 rounded-full bg-indigo-500 px-3 py-1 text-xs font-semibold text-white">
+                        Phổ biến
+                    </div>
+
+                    <h3 class="mb-2 text-lg font-semibold">Pro</h3>
+                    <p class="mb-4 text-sm text-slate-500">Truy cập đầy đủ</p>
+
+                    <div class="mb-6 text-3xl font-bold">
+                        99k
+                        <span class="text-sm font-normal text-slate-500">/ lần</span>
+                    </div>
+
+                    <ul class="mb-6 space-y-2 text-sm text-slate-600">
+                        <li>✅ Xem toàn bộ prompt</li>
+                        <li>✅ Copy không giới hạn</li>
+                        <li>❌ Không cập nhật vĩnh viễn</li>
+                    </ul>
+
+                    <a href="mailto:hungtd010302@gmail.com"
+                        class="block w-full rounded-xl bg-indigo-500 py-2 text-sm font-medium text-white hover:bg-indigo-600">
+                        Liên hệ mua
+                    </a>
+                </div>
+
+                <!-- LIFETIME -->
+                <div class="rounded-2xl border border-emerald-500 bg-emerald-50 p-6 text-center">
+                    <h3 class="mb-2 text-lg font-semibold text-emerald-700">
+                        Lifetime
+                    </h3>
+                    <p class="mb-4 text-sm text-emerald-600">
+                        Mua 1 lần – dùng trọn đời
+                    </p>
+
+                    <div class="mb-6 text-3xl font-bold text-emerald-700">
+                        149k
+                    </div>
+
+                    <ul class="mb-6 space-y-2 text-sm text-emerald-700">
+                        <li>✅ Full prompt cao cấp</li>
+                        <li>✅ Copy không giới hạn</li>
+                        <li>✅ Update prompt mới mãi mãi</li>
+                    </ul>
+
+                    <a href="mailto:hungtd010302@gmail.com"
+                        class="block w-full rounded-xl bg-emerald-600 py-2 text-sm font-medium text-white hover:bg-emerald-700">
+                        Mua Lifetime
+                    </a>
+                </div>
+            </div>
+        </section>
 
         <!-- Grid -->
         <section id="grid" class="mt-5 grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
@@ -197,7 +279,15 @@
 
     <a href="#top" id="btnTop"
         class="fixed bottom-6 right-6 z-[999] grid h-12 w-12 place-items-center rounded-full shadow-lg hover:bg-slate-800 active:translate-y-px">
-        <svg viewBox="0 0 1024 1024" width="24px" class="icon" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#000000" d="M104.704 685.248a64 64 0 0090.496 0l316.8-316.8 316.8 316.8a64 64 0 0090.496-90.496L557.248 232.704a64 64 0 00-90.496 0L104.704 594.752a64 64 0 000 90.496z"></path></g></svg>
+        <svg viewBox="0 0 1024 1024" width="24px" class="icon" xmlns="http://www.w3.org/2000/svg" fill="#000000">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+                <path fill="#000000"
+                    d="M104.704 685.248a64 64 0 0090.496 0l316.8-316.8 316.8 316.8a64 64 0 0090.496-90.496L557.248 232.704a64 64 0 00-90.496 0L104.704 594.752a64 64 0 000 90.496z">
+                </path>
+            </g>
+        </svg>
     </a>
 
     <script type="module" src="assets/app.js"></script>
