--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 </a>
 
                 <!-- Auth -->
-                <div class="flex items-center gap-2">
+                <div class="flex items-center gap-3">
+                    <!-- Hello user -->
+                    <span id="helloUser" class="hidden text-sm font-semibold text-slate-700"></span>
+
                     <button id="btnShowLogin"
                         class="rounded-xl bg-slate-900 px-3 py-2 text-sm uppercase font-bold text-white hover:bg-slate-800">
                         Login
