--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
 
                     <div class="mb-6 text-3xl font-bold">
                         99k
-                        <span class="text-sm font-normal text-slate-500">/ lần</span>
                     </div>
 
                     <ul class="mb-6 space-y-2 text-sm text-slate-600">
@@ -281,7 +280,7 @@
     </div>
 
     <a href="#top" id="btnTop"
-        class="fixed bottom-6 right-6 z-[999] grid h-12 w-12 place-items-center rounded-full shadow-lg hover:bg-slate-800 active:translate-y-px">
+        class="fixed hidden bottom-6 right-6 z-[999] grid h-12 w-12 place-items-center rounded-full shadow-lg hover:bg-slate-800 active:translate-y-px">
         <svg viewBox="0 0 1024 1024" width="24px" class="icon" xmlns="http://www.w3.org/2000/svg" fill="#000000">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
