--- a/index.html
+++ b/index.html
@@ -278,10 +278,9 @@
         </div>
     </div>
 
-    <footer class="border-t border-slate-200 py-2 text-center text-sm text-slate-500">
+    <footer class="border-t border-slate-200 pb-1 text-center text-sm text-slate-500">
         Made with ❤️ by <span class="font-semibold text-slate-700">Trần Đức Hưng</span>
     </footer>
-
 
     <a href="#" id="btnTop"
         class="fixed hidden bottom-6 right-6 z-[999] grid h-12 w-12 place-items-center rounded-full shadow-lg hover:bg-slate-800 active:translate-y-px">
