--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </button>
         </div>
 
-        <section id="pricingSection" class="mx-auto max-w-5xl px-4 py-8">
+        <section id="pricingSection" class="mx-auto max-w-5xl px-4 pt-8">
             <h2 class="mb-3 text-center text-3xl font-bold">
                 Chọn gói truy cập Prompt
             </h2>
@@ -278,7 +278,7 @@
         </div>
     </div>
 
-    <footer class="border-t border-slate-200 pb-1 text-center text-sm text-slate-500">
+    <footer class="border-t border-slate-200 py-2 text-center text-sm text-slate-500">
         Made with ❤️ by <span class="font-semibold text-slate-700">Trần Đức Hưng</span>
     </footer>
 
