--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <p class="mb-4 text-sm text-slate-500">Truy cập đầy đủ</p>
 
                     <div class="mb-6 text-3xl font-bold">
-                        99k
+                        199k
                     </div>
 
                     <ul class="mb-6 space-y-2 text-sm text-slate-600">
@@ -141,11 +141,11 @@
                     </p>
 
                     <div class="mb-6 text-3xl font-bold text-emerald-700">
-                        149k
+                        299k
                     </div>
 
                     <ul class="mb-6 space-y-2 text-sm text-emerald-700">
-                        <li>✅ Full prompt cao cấp</li>
+                        <li>✅ Full prompt ảnh + chuyển động</li>
                         <li>✅ Copy không giới hạn</li>
                         <li>✅ Update prompt mới mãi mãi</li>
                     </ul>
