--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
 
                 <!-- Auth -->
                 <div class="flex items-center gap-3">
-                    <span id="planBadge" class="inline-flex items-center rounded-md bg-blue-100 px-2 py-1 text-normal font-medium text-blue-700 inset-ring inset-ring-blue-700/10"></span>
+                    <span id="planBadge"
+                        class="inline-flex items-center rounded-md bg-blue-100 px-2 py-1 text-normal font-medium text-blue-700 inset-ring inset-ring-blue-700/10"></span>
+
+                    <a id="pricingLink" href="/pricing.html"
+                        class="rounded-xl border border-emerald-500 bg-emerald-50 px-3 py-2 text-sm uppercase font-bold text-emerald-700
+                            transition-colors duration-150
+                            hover:bg-emerald-200">
+                        🚀 ULTIMATE
+                    </a>
 
                     <button id="btnShowLogin"
                         class="rounded-xl bg-slate-900 px-3 py-2 text-sm uppercase font-bold text-white hover:bg-slate-800">
@@ -88,7 +96,7 @@
             <div class="grid gap-6 md:grid-cols-3">
                 <!-- FREE -->
                 <div class="rounded-2xl border border-slate-200 bg-slate-50 p-6 text-center opacity-70">
-                    <h3 class="mb-2 text-lg font-semibold">Free</h3>
+                    <h3 class="mb-2 text-lg font-semibold">👻 Free</h3>
                     <p class="mb-4 text-sm text-slate-500">Dùng thử</p>
 
                     <div class="mb-6 text-3xl font-bold">0₫</div>
@@ -112,7 +120,7 @@
                         Phổ biến
                     </div>
 
-                    <h3 class="mb-2 text-lg font-semibold">Pro</h3>
+                    <h3 class="mb-2 text-lg font-semibold">🎯 Pro</h3>
                     <p class="mb-4 text-sm text-slate-500">Truy cập đầy đủ</p>
 
                     <div class="mb-6 text-3xl font-bold">
@@ -134,7 +142,7 @@
                 <!-- ULTIMATE -->
                 <div class="rounded-2xl border border-emerald-500 bg-emerald-50 p-6 text-center">
                     <h3 class="mb-2 text-lg font-semibold text-emerald-700">
-                        Ultimate
+                        🚀 Ultimate
                     </h3>
                     <p class="mb-4 text-sm text-emerald-600">
                         Mua 1 lần – dùng trọn đời
