--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <ul class="mb-6 space-y-2 text-sm text-emerald-700">
                         <li>✅ Full prompt ảnh + chuyển động</li>
                         <li>✅ Copy không giới hạn</li>
-                        <li>✅ Update prompt mới mãi mãi</li>
+                        <li>✅ Update prompt mới vĩnh viễn</li>
                     </ul>
 
                     <a href="mailto:hungtd010302@gmail.com"
