--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="grid h-9 w-9 place-items-center rounded-lg bg-blue-600 text-white font-bold">
                         ✓
                     </div>
-                    <span class="text-lg font-extrabold">AI prompts easy for everyone</span>
+                    <span class="text-normal sm:text-lg font-extrabold">AI prompts easy for everyone</span>
                 </a>
 
                 <!-- Auth -->
@@ -34,7 +34,7 @@
                         class="rounded-xl border border-emerald-500 bg-emerald-50 px-3 py-2 text-sm uppercase font-bold text-emerald-700
                             transition-colors duration-150
                             hover:bg-emerald-200">
-                        🚀 ULTIMATE
+                        🚀 <span class="hidden sm:inline-block">ULTIMATE</span>
                     </a>
 
                     <button id="btnShowLogin"
@@ -86,7 +86,7 @@
         </div>
 
         <section id="pricingSection" class="mx-auto max-w-5xl px-4 pt-8">
-            <h2 class="mb-3 text-center text-3xl font-bold">
+            <h2 class="mb-3 text-center text-2xl sm:text-3xl font-bold">
                 Chọn gói truy cập Prompt
             </h2>
             <p class="mb-12 text-center text-slate-500">
