--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
                 <!-- Logo -->
                 <a href="/" class="flex items-center gap-3">
-                    <div class="hidden sm:grid h-9 w-9 place-items-center rounded-lg bg-blue-600 text-white font-bold">
+                    <div class="grid h-9 w-9 place-items-center rounded-lg bg-blue-600 text-white font-bold">
                         ✓
                     </div>
-                    <span class="text-normal sm:text-lg font-extrabold">AI prompts easy for everyone</span>
+                    <span class="hidden sm:block text-normal text-lg font-extrabold">AI prompts easy for everyone</span>
                 </a>
 
                 <!-- Auth -->
