--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
 
                 <!-- Logo -->
                 <a href="/" class="flex items-center gap-3">
-                    <div class="grid h-9 w-9 place-items-center rounded-lg bg-blue-600 text-white font-bold">
-                        ✓
-                    </div>
-                    <span class="hidden sm:block text-normal text-lg font-extrabold">AI prompts easy for everyone</span>
+                    <!-- Logo -->
+                    <img
+                        src="assets/images/Bee_Mad_Emote.png"
+                        alt="Logo"
+                        class="h-9 w-9 sm:h-10 sm:w-10 object-contain"
+                    />
+
+                    <!-- Text -->
+                    <span class="hidden sm:block text-lg font-extrabold">
+                        AI prompts easy for everyone
+                    </span>
                 </a>
 
                 <!-- Auth -->
