--- a/pricing.html
+++ b/pricing.html
@@ -27,7 +27,7 @@
                     />
 
                     <!-- Text -->
-                    <span class="text-lg font-extrabold">
+                    <span class="hidden sm:block text-lg font-extrabold">
                         AI prompts easy for everyone
                     </span>
                 </a>
