--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 
                 <!-- Auth -->
                 <div class="flex items-center gap-3">
-                    <span id="planBadge"
-                        class="inline-flex items-center rounded-md bg-blue-100 px-2 py-1 text-normal font-medium text-blue-700 inset-ring inset-ring-blue-700/10"></span>
+                    <span id="planBadge" class="hidden inline-flex items-center rounded-md bg-blue-100 px-2 py-1 text-normal font-medium text-blue-700 inset-ring inset-ring-blue-700/10"></span>
 
                     <a id="pricingLink" href="/pricing.html"
-                        class="rounded-xl border border-emerald-500 bg-emerald-50 px-3 py-2 text-sm uppercase font-bold text-emerald-700
+                        class="hidden rounded-xl border border-emerald-500 bg-emerald-50 px-3 py-2 text-sm uppercase font-bold text-emerald-700
                             transition-colors duration-150
                             hover:bg-emerald-200">
                         🚀 <span class="hidden sm:inline-block">ULTIMATE</span>
